--- a/index.html
+++ b/index.html
@@ -1,77 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-       <style>
-table,
-td,
-th {
-border: 1px solid black;
-border-collapse: collapse;
-padding: 5px;
-}
-table {
-width: 100%;
-}
-</style>
- 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hola mundo </title>
 </head>
 <body>
-    <table>
-        <tr>
-            <td>Ole </td>
-            <td>Ole </td>
-            <td>Ole </td>
-            <td>Ole </td>
-        </tr>
-            <tr>
-                <td>Ole</td>
-                <td>Ole</td>
-                <td>Ole</td>
-                <td>Ole</td>
-            </tr>
-            <tr>
-                <td>Ola</td>
-                <td>Ola</td>
-                <td>Ola</td>
-                <td>Ola</td>
-            </tr>
-    </table>
-    <table>
-    <thead>    <tr>
-        <td>Ole </td>
-        <td>Ole </td>
-        <td>Ole </td>
-        <td colspan="2">Ole </td>
-        <td>Ole </td>
-    </tr>
-    <tr>
-        <td rowspan="2"><a href="https://www.freecodecamp.org/espanol/news/subir-a-github-lo-suficientemente-simple-para-poetas/" target="blank">Ole</a></td>
-        <td><a href="https://www.freecodecamp.org/espanol/news/subir-a-github-lo-suficientemente-simple-para-poetas/" target="blank">Ole</a></td>
-        <td><a href="https://www.freecodecamp.org/espanol/news/subir-a-github-lo-suficientemente-simple-para-poetas/" target="blank">Ole</a></td>
-        <td colspan="2"><a href="https://www.freecodecamp.org/espanol/news/subir-a-github-lo-suficientemente-simple-para-poetas/" target="blank">Ole</a></td>
-        <td><a href="https://www.freecodecamp.org/espanol/news/subir-a-github-lo-suficientemente-simple-para-poetas/" target="blank">Ole</a></td>
-    </tr> </thead> 
-    <tbody>
-    <tr>
-        <td>Ola</td>
-        <td>Ola</td>
-        <td>Ola</td>
-        <td colspan="2">Ola</td>
-        <td>Ola</td>
-    </tr>
-</tbody>
-<tfoot>
-    <tr>
-        <td>Ole</td>
-        <td>Ole</td>
-        <td>Ole</td>
-        <td colspan="2">Ole</td>
-        <td>Ole</td>
-    </tr> </tfoot>
-    </table>
+    <h1>Tram pararam</h1></hr>
+    <h2>Presentacion</h2>
+    <p>Hola soy alguien buenas tarde buenas noches y buenos dias</p></hr>
+    <h1>Links</h1></hr>
+    <p>A continuacion dejo unos links de articulos interesantes</p>
+    <ul>
+        <li><a href="https://www.w3schools.com/tags/att_a_target.asp" target="blank">Articulo 1</a></li>
+        <li><a href="https://es.wikipedia.org/wiki/Doma_cl%C3%A1sica" target="blank">Articulo 2</a></li>
+        <li><a href="https://es.wikipedia.org/wiki/Eslovenia" target="blank">Articulo 3</a></li>
+    </ul>
+    <ol>
+        <li><a href="https://es.wikipedia.org/wiki/Fascismo" target="blank">Articulo 1</a></li>
+        <li><a href="https://es.wikipedia.org/wiki/Parten%C3%B3n" target="blank">Articulo 2</a></li>
+        <li><a href="https://es.wikipedia.org/wiki/Toscana" target="blank">Articulo 3</a></li>
+    </ol></hr>
+    <h1>Galeria variopinta</h1>
+    <img src="capoeira.jpg"  alt="La capoeira es un arte marcial"
+    width="150"
+    height="100"
+    title="Bamboleiro">
+    <img src="delia.jpg"  alt="No carga la imagen"
+    width="150"
+    height="100"
+    title="Milei 2023">
+    <img src="descarga.jpg"  alt="No me acuerdo que puse aca"
+    width="150"
+    height="100"
+    title="No se">
 </body>
 </html>
